[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.0"
fixed = "1.29.0"
borsh = "1.6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
borsh = "1.6.0"
litesvm = "0.8.2"
litesvm-token = "0.8.2"
sha2 = "0.10.9"
solana-program = "3.0.0"
solana-program-pack = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
spl-token-2022-interface = "2.1.0"

[[test]]
name = "initAdmin-tests"
path = "../../tests/initAdmin-tests.rs"

[[test]]
name = "setAdmin-tests"
path = "../../tests/setAdmin-tests.rs"

[[test]]
name = "createPool-tests"
path = "../../tests/createPool-tests.rs"

[[test]]
name = "deposit-tests"
path = "../../tests/deposit-tests.rs"

[[test]]
name = "withdraw-tests"
path = "../../tests/withdraw-tests.rs"

[[test]]
name = "swap-tests"
path = "../../tests/swap-tests.rs"
